# CharacterBinder

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CardPreviewPanel.tsx  CharacterEditor.tsx  ConfirmModal.tsx  CreateCard.tsx  DecodePNG.tsx  FieldCompatibility.tsx  HelpAbout.tsx  ImportPNG.tsx  JSONView.tsx  Library.tsx  LoreBookEditor.tsx  PersonaEditor.tsx  PlatformSelector.tsx  RawPreview.tsx  ScenarioEditor.tsx  ScriptEditor.tsx  Settings.tsx  Sidebar.tsx  Templates.tsx
src/data/templates/: ronalVoss.ts
src/lib/archive/: index.ts
src/lib/cardFormats/: index.ts
src/lib/customTemplates/: index.ts
src/lib/exporters/: index.ts
src/lib/pngMetadata/: index.ts
src/lib/tokenizer/: index.ts
src/lib/validators/: index.ts
src/types/: index.ts
