[package]
name = "character-binder"
version = "1.0.0"
description = "CharacterBinder - Create, edit, and export character cards for AI roleplay platforms"
authors = []
edition = "2021"

[lib]
name = "character_binder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "character-binder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
